--- a/index.html
+++ b/index.html
@@ -11,42 +11,47 @@
   <body>
     <header>
       <a href="index.html" role="logo">
-        <img src="./asset/Logo 1.png" class="logo" />
+        <img src="./asset/Logo 1.png" class="logo" alt="Site Logo" />
       </a>
 
-      <div>
-        <nav role="navigation" aria-label="Main navigation">
-          <button
-            class="menu-toggle"
-            aria-label="Toggle menu"
-            aria-expanded="false"
-          >
-            <div class="hamburger">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-          </button>
+      <!-- Navigation -->
+      <nav role="navigation" aria-label="Main navigation" class="nav-links">
+        <ul>
+          <li>
+            <a href="#home" class="nav-link active" data-page="home">Home</a>
+          </li>
+          <li>
+            <a href="#about" class="nav-link" data-page="about">About Me</a>
+          </li>
+          <li>
+            <a href="#contact" class="nav-link" data-page="contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
 
-          <ul>
-            <li>
-              <a href="#home" class="nav-link active" data-page="home">Home</a>
-            </li>
-            <li>
-              <a href="#about" class="nav-link" data-page="about">About Me</a>
-            </li>
-            <li>
-              <a href="#contact" class="nav-link" data-page="contact"
-                >Contact</a
-              >
-            </li>
-          </ul>
-        </nav>
-
-        <!-- Add overlay div after nav -->
-        <div class="menu-overlay"></div>
+      <!-- Hamburger Icon -->
+      <div
+        class="hamburger"
+        id="hamburger"
+        aria-label="Menu"
+        aria-expanded="false"
+        role="button"
+        tabindex="0"
+      >
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
     </header>
+
+    <!-- Overlay Menu -->
+    <div class="overlay" id="overlay">
+      <nav class="overlay-nav" aria-label="Overlay navigation">
+        <a href="#home" class="nav-link active" data-page="home">Home</a>
+        <a href="#about" class="nav-link" data-page="about">About Me</a>
+        <a href="#contact" class="nav-link" data-page="contact">Contact</a>
+      </nav>
+    </div>
 
     <div class="container">
       <!-- Home Page -->
