--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <header>
+      <!-- Profile Logo -->
       <a href="index.html" role="logo">
         <img src="./asset/Logo 1.png" class="logo" alt="Site Logo" />
       </a>
