--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </ul>
 
           <div class="features">
-            <section class="about-section" data-testid="test-about-bio">
+            <section class="about-section" data-testid="test-about-hobbies">
               <h3 class="list-header"><span>❤️</span> Hobbies</h3>
               <ul data-testid="test-user-hobbies" class="list">
                 <li class="list-item">Coding</li>
@@ -136,7 +136,7 @@
               </ul>
             </section>
 
-            <section class="about-section" data-testid="test-about-bio">
+            <section class="about-section" data-testid="test-about-dislikes">
               <h3 class="list-header"><span>👎</span> Dislikes</h3>
               <ul data-testid="test-user-dislikes" class="list">
                 <li class="list-item"><span></span>Procrastination</li>
@@ -201,7 +201,7 @@
               Secure a frontend developer position at a forward-thinking company
             </li>
             <li>
-              Last but not list... it would also be okay if I find love at the
+              Last but not least... it would also be okay if I find love at the
               end 😜
             </li>
           </ul>
